# TermiNet

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/terminet/: __about__.py  entry_points.py  monitor.py  network_monitor.py  network_table.py  styles.tcss
tests/: __init__.py
