[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terminet"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "no-kris", email = "kris.tresk@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/no-kris/terminet#readme"
Issues = "https://github.com/no-kris/terminet/issues"
Source = "https://github.com/no-kris/terminet"

[tool.hatch.version]
path = "src/terminet/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/terminet tests}"

[tool.coverage.run]
source_pkgs = ["terminet", "tests"]
branch = true
parallel = true
omit = [
  "src/terminet/__about__.py",
]

[tool.coverage.paths]
terminet = ["src/terminet", "*/terminet/src/terminet"]
tests = ["tests", "*/terminet/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
